--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Git & GitHub Tutorial</title>
   </head>
   <body>
-    <h1>10 lệnh GIT cơ bản</h1>
+    <h2>10 lệnh GIT cơ bản</h2>
+    <p>Huong dan chi tiet cach su dung Git va cac lenh Git co ban</p>
   </body>
 </html>
