add Test Git status

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h2>10 lệnh GIT cơ bản</h2>
     <p>Huong dan chi tiet cach su dung Git va cac lenh Git co ban</p>
+    <span>Test git status</span>
   </body>
 </html>
